--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="header">header</div>
+        <div class="header">
+            <img src="./img/logo.png" width="50px">
+            <ul class="header-links">
+                <li><a href="">header link 1</a></li>
+                <li><a href="">header link 2</a></li>
+                <li><a href="">header link 3</a></li>
+            </ul>
+        </div>
 
         <div class="banner">banner</div>
 
