--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="header">
-            <img src="./img/logo.png" width="50px">
-            <ul class="header-links">
-                <li><a href="">header link 1</a></li>
-                <li><a href="">header link 2</a></li>
-                <li><a href="">header link 3</a></li>
-            </ul>
+        <div class="hero">
+            <div class = "header">
+                <img src="./img/logo.png" width="50px">
+                <ul class="header-links">
+                    <li><a href="">header link 1</a></li>
+                    <li><a href="">header link 2</a></li>
+                    <li><a href="">header link 3</a></li>
+                </ul>
+            </div>
+            <div class = "banner">
+                <div>
+                    <h1>Machu Picchu Tours</h1>
+                    <p>Experience the Majesty of the Inca Empire with Machu Picchu Tours</p>
+                    <button>Sign Up</button>
+                </div>
+                <img src="./img/machu-picchu.jpeg" width="300px">
+            </div>
         </div>
-
-        <div class="banner">banner</div>
 
         <div class="carousel">carousel</div>
 
