feat: complete carousel section content and styling
Added all copy, content and styling to carousel section,
including 4 images.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
             </div>
         </div>
 
-        <div class="carousel">carousel</div>
+        <div class="carousel-section">
+            <h2>Conquer the Salkantay and Discover Machu Picchu: A Journey Beyond the Ordinary</h2>
+            <ul class="carousel">
+                <li>
+                    <img class="carousel-img" src="./img/andean-landscapes.jpeg">
+                    <p class="carousel-text">Start your adventure amidst breathtaking Andean landscapes</p>
+                </li>
+                <li>
+                    <img class="carousel-img" src="./img/snow-fields.jpeg">
+                    <p class="carousel-text">Traverse diverse terrains from snowfields to cloud forests</p>
+                </li>
+                <li>
+                    <img class="carousel-img" src="./img/salkantay-pass.jpeg">
+                    <p class="carousel-text">Experience the thrill of reaching the Salkantay Pass</p>
+                </li>
+                <li>
+                    <img class="carousel-img" src="./img/machu-picchu-carousel.jpeg">
+                    <p class="carousel-text">Unveil the secrets of Machu Picchu after an epic journey</p>
+                </li>
+            </ul>
+        </div>
 
         <div class="testimonial">testimonial</div>
 
