feat - complete testimonial section. simplify sections css
Added quote and styling. Added new class for main sections
to eliminate repetitive padding definitions.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <title>Machu Picchu Trekking</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="hero">
+        <div class="hero main-section">
             <div class = "header">
                 <img src="./img/logo.png" width="50px">
                 <ul class="header-links">
@@ -25,7 +26,7 @@
             </div>
         </div>
 
-        <div class="carousel-section">
+        <div class="carousel-section main-section">
             <h2>Conquer the Salkantay and Discover Machu Picchu: A Journey Beyond the Ordinary</h2>
             <ul class="carousel">
                 <li>
@@ -47,9 +48,12 @@
             </ul>
         </div>
 
-        <div class="testimonial">testimonial</div>
+        <div class="testimonial main-section">
+            <p class="quote-text">The Machu Picchu Tour was an unforgettable adventure, blending breathtaking landscapes with rich history. The guides were outstanding, making every moment on the trail both educational and inspiring</p>
+            <p class="quote-text author"><strong>-Emma Rodriguez</strong></p>
+        </div>
 
-        <div class="cta">call to action</div>
+        <div class="cta main-section">call to action</div>
 
         <div class="footer">footer</div>
     </body>
