feat - complete CTA section content and styling
Added content and styling for CTA section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <div class = "header">
                 <img src="./img/logo.png" width="50px">
                 <ul class="header-links">
-                    <li><a href="">header link 1</a></li>
-                    <li><a href="">header link 2</a></li>
-                    <li><a href="">header link 3</a></li>
+                    <li><a class="secondary-text" href="">header link 1</a></li>
+                    <li><a class="secondary-text" href="">header link 2</a></li>
+                    <li><a class="secondary-text" href="">header link 3</a></li>
                 </ul>
             </div>
             <div class = "banner">
@@ -50,10 +50,18 @@
 
         <div class="testimonial main-section">
             <p class="quote-text">The Machu Picchu Tour was an unforgettable adventure, blending breathtaking landscapes with rich history. The guides were outstanding, making every moment on the trail both educational and inspiring</p>
-            <p class="quote-text author"><strong>-Emma Rodriguez</strong></p>
+            <p class="secondary-text author"><strong>-Emma Rodriguez</strong></p>
         </div>
 
-        <div class="cta main-section">call to action</div>
+        <div class="cta main-section">
+            <div class = "cta-box">
+                <div>
+                    <p class="secondary-text"><strong>Your Adventure Awaits!</strong></p>
+                    <p>Sign up now and start your journey to Machu Picchu today!</p>
+                </div>
+                <button class="cta-button">Sign Up</button>
+            </div>
+        </div>
 
         <div class="footer">footer</div>
     </body>
