feat - complete footer content and style

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             </div>
         </div>
 
-        <div class="footer">footer</div>
+        <div class="footer">
+            <p>Copyright © AlexOz Designs 2024</p>
+        </div>
     </body>
 </html>
