feat - add alt text to images and content to header links
Added alt text to all images. Added copy for all header
links. Increased width of header logo.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <div class="hero main-section">
             <div class = "header">
-                <img src="./img/logo.png" width="50px">
+                <img src="./img/logo.png" alt="Machu Picchu Tours Logo" width="100px">
                 <ul class="header-links">
-                    <li><a class="secondary-text" href="">header link 1</a></li>
-                    <li><a class="secondary-text" href="">header link 2</a></li>
-                    <li><a class="secondary-text" href="">header link 3</a></li>
+                    <li><a class="secondary-text" href="">Our Tours</a></li>
+                    <li><a class="secondary-text" href="">Itinerary</a></li>
+                    <li><a class="secondary-text" href="">Sign Up</a></li>
                 </ul>
             </div>
             <div class = "banner">
@@ -22,7 +22,7 @@
                     <p>Experience the Majesty of the Inca Empire with Machu Picchu Tours</p>
                     <button>Sign Up</button>
                 </div>
-                <img src="./img/machu-picchu.jpeg" width="300px">
+                <img src="./img/machu-picchu.jpeg" alt="Photo of Machu Picchu" width="300px">
             </div>
         </div>
 
@@ -30,19 +30,19 @@
             <h2>Conquer the Salkantay and Discover Machu Picchu: A Journey Beyond the Ordinary</h2>
             <ul class="carousel">
                 <li>
-                    <img class="carousel-img" src="./img/andean-landscapes.jpeg">
+                    <img class="carousel-img" src="./img/andean-landscapes.jpeg" alt="Photo of Andean Landscapes">
                     <p class="carousel-text">Start your adventure amidst breathtaking Andean landscapes</p>
                 </li>
                 <li>
-                    <img class="carousel-img" src="./img/snow-fields.jpeg">
+                    <img class="carousel-img" src="./img/snow-fields.jpeg" alt="Photo of Snow Fields and Cloud Forests">
                     <p class="carousel-text">Traverse diverse terrains from snowfields to cloud forests</p>
                 </li>
                 <li>
-                    <img class="carousel-img" src="./img/salkantay-pass.jpeg">
+                    <img class="carousel-img" src="./img/salkantay-pass.jpeg" alt="Photo of the Salkantay Pass">
                     <p class="carousel-text">Experience the thrill of reaching the Salkantay Pass</p>
                 </li>
                 <li>
-                    <img class="carousel-img" src="./img/machu-picchu-carousel.jpeg">
+                    <img class="carousel-img" src="./img/machu-picchu-carousel.jpeg" alt="Photo of Machu Picchu">
                     <p class="carousel-text">Unveil the secrets of Machu Picchu after an epic journey</p>
                 </li>
             </ul>
