feat - replace banner image and add css for dynamic resizing
Replaced banner image with a slightly nicer looking one.
Modified corresponding css so that the image will scale
down if window size is adjusted.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p>Experience the Majesty of the Inca Empire with Machu Picchu Tours</p>
                     <button>Sign Up</button>
                 </div>
-                <img src="./img/machu-picchu.jpeg" alt="Photo of Machu Picchu" width="300px">
+                <img class="banner-image" src="./img/machu-picchu.jpg" alt="Photo of Machu Picchu" width="500px">
             </div>
         </div>
 
